# OI.AI.DataEng.TakeHome

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yaml  docker-compose.yml  pyproject.toml
airflow/dags/: video_classification_dag.py
conf/: settings.json  settings.tests.json
project/: create_dataset.py  entrypoint.py  video_extract.py  workflows.py
project/crosscutting/: config_helper.py  configs.py  utils.py
project/tests/integration_tests/: test_integration.py  test_video_extract.py
project/tests/unit_tests/: test_create_dataset.py  test_utils.py  test_video_extract.py
