[tool.poetry]
name = "video_extract"
version = "0.1.0"
description = """Data Engineer Take Home Challenge to extract and resize frames from videos to
generate image datasets forvideo classification."""
authors = ["João Teixeira <joaopteixeira58@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "*"
pydantic = "*"
apache-airflow = "*"
pendulum = "*"
pre-commit = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
black = "*"
isort = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
